<resources>

    <string name="app_name">C&amp;P</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="choose_one">Choose one</string>
    <string name="post_to_feed">Post to Feed</string>
    <string name="checkin">Checkin</string>
    <string name="later">Later</string>
    <string name="settings">Profile</string>
    <string name="other">other</string>
    <string name="password">Password</string>
    <string name="nickname">Nickname</string>
    <string name="re_password">Re-type Password</string>
    <string name="coffeeandpower.com">coffeeandpower.com</string>
    <string name="click_here_to_open_feed">click here to open venue feed</string>
    <string name="email">Email</string>
    <string name="loading">Loading ...</string>
    <string name="resume">Resume</string>
    <string name="linkedin">LinkedIn</string>
    <string name="facebook">Facebook</string>
    <string name="recognition">Endorsements</string>
    <string name="education">Education</string>
    <string name="ok">Ok</string>
    <string name="done">Done</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="button_feeds">Feeds</string>
    <string name="button_cancel">Cancel</string>
    <string name="activityFeedsUpdateText">Update:</string>
    <string name="activityFeedsQuestionText">Question:</string>
    <string name="activity_add_funds">Add Funds</string>
    <string name="activity_chat_name">Chat Name</string>
    <string name="activity_chat_type">Type to chat</string>
    <string name="activity_check_in_list_check">Check In</string>
    <string name="activity_check_in_check_in_at">CHECK IN AT...</string>
    <string name="activity_check_in_who">Who\'s here now?</string>
    <string name="activity_check_in_what">What are you working on right now?</string>
    <string name="activity_check_in_optional">optional</string>
    <string name="activity_check_in_for_how_long">How long will you be here?</string>
    <string name="activity_enter_invite_code_enter">Enter invite code from \nnearby C&amp;P user</string>
    <string name="activity_enter_invite_linkedin">Invite LinkedIn Connections</string>
    <string name="activity_invite_contacts_send_invitation">Send LinkedIn Invitation</string>
    <string name="activity_job_category_job">Job Categories</string>
    <string name="activity_job_caregory_major">Major Job Category</string>
    <string name="activity_job_caregory_minor">Minor Job Category</string>
    <string name="activity_join_join">Join</string>
    <string name="activity_join_co_working">Join the co-working revolution!</string>
    <string name="activity_join_email_address">Email Address</string>
    <string name="activity_join_did_not">You did not enter a valid email address.</string>
    <string name="activity_join_nickname_must_be">Nickname must be at least 3 characters long.</string>
    <string name="activity_list_places_details_place_name">Place Name</string>
    <string name="activity_main_login_connect">Connect with LinkedIn \n to start using C&amp;P</string>
    <string name="login">Login</string>
    <string name="you_must_be_a_member">You must be a member to use this feature.</string>
    <string name="you_must_be_checked_in">Please check in at venue to post a question.</string>
    <string name="you_have_to_be_checked_in">You have to be checked in to this venue to comment or +1.</string>
    <string name="dialog_post_a_question_title">Post a Question</string>
    <string name="dialog_post_a_question_content_0">Are you sure you want to ask this question? Your question will be sent to no one.</string>
    <string name="dialog_post_a_question_content_1">Are you sure you want to ask this question? Your question will be sent to 1 user.</string>
    <string name="dialog_post_a_question_content_2">Are you sure you want to ask this question? Your question will be sent to %d users.</string>
    <string name="activity_places_details_here">Here now...</string>
    <string name="activity_places_details_have">Have worked here...</string>
    <string name="activity_settings_invite">Invite</string>
    <string name="activity_settings_profile_photo">Profile Photo</string>
    <string name="activity_settings_strongest_skill_lbl">My strongest skill is...</string>
    <string name="activity_settings_strongest_skill_lbl_p">My strongest skills are...</string>
    <string name="activity_settings_skills_lbl">Select a maximum of five skills that best represent you.</string>
    <string name="max_5_skills">You may select a maximum of 5 skills</string>
    <string name="activity_linkedin_skills_title">Skills</string>
    <string name="profile_title">Profile</string>
    <string name="activity_settings_strongest_skill">None</string>
    <string name="activity_settings_job_category_lbl">Job Categories</string>
    <string name="activity_settings_job_category">Other/Other</string>
    <string name="activity_settings_smarterer">Smarterer Badges</string>
    <string name="activity_settings_profile_visibility">Profile visibility</string>
    <string name="activity_settings_profile_visibility_everyone">Allow everyone</string>
    <string name="activity_settings_profile_visibility_logged_in">Only logged in users</string>
    <string name="activity_settings_profile_delete">Delete Account</string>
    <string name="activity_sign_in">Sign In</string>
    <string name="activity_sign_in_join">Join Coffee &amp; Power</string>
    <string name="activity_user_details_available">AVAILABLE FOR:</string>
    <string name="activity_user_details_rate">RATE:</string>
    <string name="activity_user_details_earned">HOURS</string>
    <string name="activity_user_details_props">ENDORSEMENTS</string>
    <string name="activity_user_details_sendlove">Recognize User</string>
    <string name="activity_user_details_often">Often works at...</string>
    <string name="activity_user_details_joined">Joined on</string>
    <string name="activity_wallet">Wallet</string>
    <string name="activity_wallet_your_balance">Your Balance</string>
    <string name="activity_wallet_transaction_history">Transaction History</string>
    <string name="custom_dialog_title">Title</string>
    <string name="custom_dialog_message">Message</string>
    <string name="recognition_placeholder">Type your endorsement text here.</string>
    <string name="headline_placeholder">Type your new headline here...</string>
    <string name="recognition_char_limit">140</string>
    <string name="recognize_skill_prompt">Endorse Skill</string>
    <string name="tab_activity_contacts_contact">Contact list</string>
    <string name="tab_map">Map</string>
    <string name="tab_list">List</string>
    <string name="tab_places">Places</string>
    <string name="tab_people">People</string>
    <string name="tab_log_in">Log In</string>
    <string name="notifications_label">Notifications</string>
    <string name="tab_contacts">Contacts</string>
    <string name="tab_check_in">Check In</string>
    <string name="user_menu_support">Support</string>
    <string name="application_version">Version 1.0</string>
    <string name="activity_support_send_feedback">Send Feedback</string>
    <string name="activity_support_tos">Terms of Service</string>
    <string name="activity_support_version">version</string>
    <string name="user_menu_logout">Logout</string>
    <string name="user_menu_show">Show me new Check Ins</string>
    <string name="user_menu_in_city">in city</string>
    <string name="user_menu_in_venue">in venue</string>
    <string name="user_menu_in_contacts">contacts</string>
    <string name="user_menu_only">Only when I am\nchecked in</string>
    <string name="help_linked_in_invite_list">Click here to select LinkedIn contacts</string>
    <string name="checked_out_confirmation">Are you sure you want to be checked out?</string>
    <string name="checked_out_confirmation_with_venue_name">Do you want to leave %1$s?
        You can always go back
        later!</string>
    <string name="activity_invite_contacts_title">Invite LinkedIn Connections</string>
    <string name="activity_invite_confirm_header">%1$s is inviting you to Coffee &amp; Power</string>
    <string name="message_checking_out">"Checking out..."</string>
    <string name="message_choose_feed">"Choose Feed"</string>
    <string name="message_active_feeds">"Active Feeds"</string>
    <string name="people_screen_title">Nearby People</string>
    <string name="places_screen_title">Venues</string>
    <string name="map_screen_title">Map</string>
    <string name="contacts_screen_title">Contacts</string>
    <string name="activity_invite_confirm_content">
<![CDATA[
        Hi! %1$s is inviting you to join Coffee &amp; Power. C&amp;P is an app that lets you see 
        who is working near you right now. 
<br/><br/>
If %1$s is also a LinkedIn contact, they will automatically be added to your C&amp;P contact list and 
you will be notified when they check in to workplaces. 
<br/><br/>
If you have not already, download the app from the iTunes or Google Play stores.
<br/>
    ]]>
    </string>
    <string name="googleMapsApiKey">0PV0Dp_6Dj6PkG_8xJqiTbSPxXwq2XEiEqXkO_Q</string>
    <string name="map_distance_far">Far far away</string>
    <string name="auto_checkin_label">Auto Checkin</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="wont_tell">(we won\'t tell)</string>
    <string name="contact_exchanged_message">%1$s exchanged contact info with you.</string>
    <string name="message_internet_connection_error">Internet connection error</string>
    <string name="message_linkedin_oauth_error">There was an issue with your LinkedIn authorization.</string>
    <string name="error">Error</string>

</resources>