<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- Setting Layout View -->

    <LinearLayout
        android:id="@+id/dummy_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <com.coffeeandpower.views.CustomFontView
            android:id="@+id/text_nick_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#2d2d2d"
            android:padding="10dp"
            android:text=""
            android:textColor="#dddddd"
            android:textSize="25sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="#2d2d2d" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="#494949" />

        <com.coffeeandpower.views.CustomFontView
            android:id="@+id/text_invite_codes"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_gray"
            android:clickable="true"
            android:onClick="onClickEnterInviteCode"
            android:padding="10dp"
            android:text="@string/activity_settings_invite"
            android:textColor="#dddddd"
            android:textSize="20sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="#2d2d2d" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="#494949" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="#494949" />

        <com.coffeeandpower.views.CustomFontView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_gray"
            android:clickable="true"
            android:onClick="onClickSettings"
            android:padding="10dp"
            android:text="@string/settings"
            android:textColor="#dddddd"
            android:textSize="20sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="#2d2d2d" />
        
        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="#494949" />

        <com.coffeeandpower.views.CustomFontView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_gray"
            android:clickable="true"
            android:onClick="onClickNotifications"
            android:padding="10dp"
            android:text="@string/notifications_label"
            android:textColor="#dddddd"
            android:textSize="20sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="#2d2d2d" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="#494949" />

        <com.coffeeandpower.views.CustomFontView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_gray"
            android:clickable="true"
            android:onClick="onClickSupport"
            android:padding="10dp"
            android:text="@string/user_menu_support"
            android:textColor="#dddddd"
            android:textSize="20sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="#2d2d2d" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="#494949" />

        <com.coffeeandpower.views.CustomFontView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_gray"
            android:clickable="true"
            android:onClick="onClickLogout"
            android:padding="10dp"
            android:text="@string/user_menu_logout"
            android:textColor="#dddddd"
            android:textSize="20sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="#2d2d2d" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="#494949" />
    </LinearLayout>


</RelativeLayout>